# wind_simulation

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  wind.sln
editor/: CMakeLists.txt  editor.vcxproj
editor/res/scenes/: default.json  spline.json  tornado.json  world.json
editor/res/shaders/: diffuse_ext.bsl  transparent_no_cull.bsl  wireframe.bsl
editor/src/: editor.cpp  editor.hpp  factory.cpp  factory.hpp  main.cpp  ui.cpp  ui.hpp
editor/src/editor/: editor.cpp  editor.hpp  factory.cpp  factory.hpp  main.cpp  ui.cpp  ui.hpp
editor/src/editor/sim/: density_field.cpp  density_field.hpp  obstruction_field.cpp  obstruction_field.hpp  vector_field.cpp  vector_field.hpp  wind_sim.cpp  wind_sim.hpp
editor/src/sim/: density_field.cpp  density_field.hpp  obstruction_field.cpp  obstruction_field.hpp  vector_field.cpp  vector_field.hpp  wind_sim.cpp  wind_sim.hpp
runtime/: CMakeLists.txt  runtime.vcxproj
runtime/Data/: ResourceManifest.asset  Timestamp.asset
runtime/Data/Cursors/: ArrowDrag.psd.asset  ArrowLeftRight.psd.asset  Deny.psd.asset  IBeam.psd.asset  SizeNS.psd.asset  SizeNWSE.psd.asset  Wait.psd.asset
runtime/Data/Icons/: bsfIcon.png.asset
runtime/Data/Meshes/: Sphere.asset
runtime/Data/Shaders/: Clear.bsl.asset  ClearLoadStore.bsl.asset  Decal.bsl.asset  DeferredIBLProbe.bsl.asset  DeferredIBLSetup.bsl.asset  DeferredPointLight.bsl.asset  GpuParticleSimulate.bsl.asset  IrradianceEvaluate.bsl.asset  LightGridLLCreation.bsl.asset  LightGridLLReduction.bsl.asset  PPEncodeDepth.bsl.asset  PPGaussianDOFCombine.bsl.asset  PPSSAOBlur.bsl.asset  PPSSAODownsample.bsl.asset  ParticlesLit.bsl.asset  ShadowDepthNormalNoPS.bsl.asset  ShadowProjectOmni.bsl.asset  ShadowProjectStencil.bsl.asset  Skybox.bsl.asset  TetrahedraRender.bsl.asset  Transparent.bsl.asset
runtime/Data/Shaders/Includes/: GBufferInput.bslinc.asset  GBufferOutput.bslinc.asset  MaskInput.bslinc.asset  SurfaceData.bslinc.asset
runtime/Data/Skin/: ButtonFocusedHover.png.asset  ButtonHover.png.asset  DropDownBoxArrowUpNormal.png.asset  DropDownBoxEntryHover.png.asset  DropDownBoxEntryNormal.png.asset  DropDownBoxEntryToggleHoverOn.png.asset  DropDownBoxEntryToggleNormalOn.png.asset  DropDownBoxScrollHandle.png.asset  DropDownBoxSeparator.png.asset  DropDownButtonActive.png.asset  DropDownButtonFocused.png.asset  DropDownButtonFocusedHover.png.asset  DropDownButtonHover.png.asset  DropDownButtonNormal.png.asset  DropDownFocusedHover.png.asset  InputBoxNormal.png.asset  ScrollArrowDownNormal.png.asset  ScrollArrowLeftNormal.png.asset  ScrollArrowRightNormal.png.asset  ScrollArrowUpHover.png.asset  ScrollBarHBackground.png.asset  ScrollBarHHandleActive.png.asset  ScrollBarHHandleNormal.png.asset  ScrollBarHHandleResizeableActive.png.asset  ScrollBarVBackground.png.asset  ScrollBarVHandleNormal.png.asset  ScrollBarVHandleResizeableHover.png.asset  ScrollBarVHandleResizeableNormal.png.asset  SliderHBackground.png.asset  SliderHandleHover.png.asset  SliderHandleNormal.png.asset  ToggleFocusedHoverOn.png.asset  ToggleNormalOn.png.asset
runtime/Data/Skin/Sprites/: sprite_ButtonFocused.png.asset  sprite_DropDownBoxArrowUpHover.png.asset  sprite_DropDownBoxArrowUpNormal.png.asset  sprite_DropDownBoxBg.png.asset  sprite_DropDownBoxEntryHover.png.asset  sprite_DropDownBoxEntryNormal.png.asset  sprite_DropDownBoxSeparator.png.asset  sprite_DropDownBoxSideBg.png.asset  sprite_DropDownButtonFocused.png.asset  sprite_DropDownButtonHover.png.asset  sprite_DropDownFocusedHover.png.asset  sprite_InputBoxActive.png.asset  sprite_InputBoxNormal.png.asset  sprite_ScrollArrowDownHover.png.asset  sprite_ScrollArrowDownNormal.png.asset  sprite_ScrollArrowLeftActive.png.asset  sprite_ScrollArrowLeftNormal.png.asset  sprite_ScrollArrowUpActive.png.asset  sprite_ScrollArrowUpNormal.png.asset  sprite_ScrollBarHBackground.png.asset  sprite_ScrollBarHHandleResizeableActive.png.asset  sprite_ScrollBarHHandleResizeableNormal.png.asset  sprite_ScrollBarVBackground.png.asset  sprite_ScrollBarVHandleActive.png.asset  (+12 more)
runtime/Data/Textures/: White.asset
runtime/res/meshes/: cylinder.fbx  rotor.fbx
runtime/res/scenes/: default.json  spline.json  tornado.json  wind.json  world.json
runtime/res/shaders/: transparent_ext.bsl  wireframe.bsl
runtime/src/: BsFPSCamera.cpp  BsFPSCamera.h  BsFPSWalker.cpp  BsFPSWalker.h  cmyplayer.cpp  cmyplayer.hpp  cnet_component.cpp  cnet_component.hpp  cplayer.cpp  cplayer.hpp  creator.cpp  creator.hpp  crotor.cpp  crotor.hpp  main.cpp  moveable_state.cpp  moveable_state.hpp  player_input.cpp  player_input.hpp  rtti_types.hpp  ui.cpp  world.cpp  world.hpp
runtime/src/network/: client.cpp  client.hpp  connection_id.cpp  connection_id.hpp  connection_state.hpp  net_common.cpp  net_common.hpp  network.cpp  network.hpp  packet.cpp  packet.hpp  packet_header.hpp  server.cpp  server.hpp  side.cpp  side.hpp  util.cpp  util.hpp
runtime/src/runtime/: cmyplayer.cpp  cmyplayer.hpp  main.cpp  ui.cpp  ui.hpp  world.cpp  world.hpp
runtime/src/utility/: unique_id.hpp
shared/: CMakeLists.txt  shared.vcxproj
shared/src/: BsCameraFlyer.cpp  BsCameraFlyer.h  app.cpp  app.hpp  asset.cpp  asset.hpp  common.hpp  log.hpp  macros.hpp  types.hpp  util.cpp  util.hpp
shared/src/debug/: debug.cpp  debug.hpp
shared/src/math/: density_field.cpp  density_field.hpp  dim.hpp  field.hpp  math.hpp  obstruction_field.cpp  obstruction_field.hpp  vector_field.cpp  vector_field.hpp
shared/src/scene/: cnet_component.cpp  cnet_component.hpp  component_factory.cpp  component_factory.hpp  component_handles.hpp  crotor.cpp  crotor.hpp  rtti.hpp  wind_src.cpp  wind_src.hpp
shared/src/shared/: app.cpp  app.hpp  assert.cpp  assert.hpp  asset.cpp  asset.hpp  camera_flyer.cpp  camera_flyer.h  common.hpp  log.cpp  log.hpp  macros.hpp  memory.cpp  memory.hpp  string.cpp  string.hpp  types.hpp
shared/src/state/: moveable_state.hpp  player_input.hpp
shared/src/utility/: bsprinter.hpp  rtti_types.hpp  util.cpp  util.hpp
shared/src/wind/: base_functions.cpp  base_functions.hpp
(+129 files in other folders)
