project(editor)

## ========================================================================== ##
## Flags
## ========================================================================== ##s

set(CMAKE_CXX_STANDARD 17)

## ========================================================================== ##
## Sources/Headers
## ========================================================================== ##

set(SOURCES
	src/editor/main.cpp
	)

set(HEADERS
	)

## ========================================================================== ##
## Output
## ========================================================================== ##

add_executable(${PROJECT_NAME} 
	${SOURCES}
	${HEADERS}
	)

target_link_libraries(${PROJECT_NAME} shared)

target_include_directories(${PROJECT_NAME} PRIVATE
	src/
	../shared/src
	)