project(shared)

## ========================================================================== ##
## Flags
## ========================================================================== ##

set(CMAKE_CXX_STANDARD 17)
## ========================================================================== ##
## Sources/Headers
## ========================================================================== ##

set(SOURCES
	src/shared/app.cpp
	)

set(HEADERS
	src/shared/app.hpp
	)

## ========================================================================== ##
## Output
## ========================================================================== ##

add_library(${PROJECT_NAME} 
	${SOURCES}
	${HEADERS}
	)

target_include_directories(${PROJECT_NAME} PRIVATE
	src/
	)